# pyometiff

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  example_script.py  omereader.py  omewriter.py  omexml.py  pyproject.toml  requirements  setup.py
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/workflows/: python-publish.yml
pyometiff/: __init__.py  omereader.py  omewriter.py  omexml.py
src/: omereader.py  setup.py
tests/: omereader_test.py  omewriter_test.py
